Fixed cool-bar not showing and disabled temporarily smooth scrolling

--- a/assets/css/general/general.css
+++ b/assets/css/general/general.css
@@ -5,9 +5,9 @@
   --transition--transform: transform 0.35s;
 }
 
-html {
+/* html {
   scroll-behavior: smooth;
-}
+} */
 
 button:focus {
   @apply outline-none;
